# django-demo

./: .env.dev  Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo/: settings.py
