[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = "A demo project dockerized with poetry"
authors = ["Sam Kanda"]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.1.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
